--- a/TCMSFRONTEND/Views/Modules/Static/About.html
+++ b/TCMSFRONTEND/Views/Modules/Static/About.html
@@ -9,8 +9,12 @@
             <h2 class="item-title">About us</h2>
             <div class="item-text">
                 <div class="introtext">
-                    <p>The "Iran" program is a 25 minute weekly show that explores Iran's past, present, and future with exclusive reports.</p>
-                    <p>Through "Iran", we do our best to help our audience discover this ancient land anew and get acquainted with its art and culture.</p>
+                    <p>
+                        Press TV is a 24-hour English language news organization of the Islamic Republic of Iran Broadcasting (IRIB). The broadcaster carries news analysis, documentaries, talk shows and programs. The Iran program is one of the network's most popular a 25-minute weekly show which portrays the true image of Iran, the land of beauty and civilization.
+                        This is Iran ... land of passion and beauty, culture and history, art and architecture, poetry and literature   rich and ancient testimonies of Iran's culture and civilization, with a wide variety of landscapes and climates, as well as numerous historical-archaeological sites. The various ethnic groups that have lived in this land for centuries - with their fascinating traditions and customs - have made Iran THE TREASURE, the invaluable heritage of today.
+                        Thousands of years of history, interspersed with glorious dynasties and empires, have provided Iran an artistic heritage of inestimable value. In every part of the country, there are traces of an ancient culture: treasures of architectural beauty such as castles, buildings, squares, mosques and citadels. Each and every corner hides its own thousand-year-old secret which will surprise visitors with its mysterious charm.
+                        The "country of four seasons" is also the land of memories, with plenty of bazaars and traditional markets. Tourists can appreciate the quality of Iranian handicrafts while they enjoy the divine flavors of Persian cuisine. With the pure whiteness of the snow, the bright ocher of the deserts, the exhilarating blue of the sea, the lush green of the forests and the leaves of the tree of identity, dignity and integrity, Iran paints a rainbow-colored picture of love, beauty and hospitality. If you want to gain a unique experience within a great country, come and visit Iran. The Iran program is a virtual journey throughout this wonderful land.
+                    </p>
                 </div>
             </div>
         </div>
