--- a/TCMSFRONTEND/Views/Modules/Content/full.html
+++ b/TCMSFRONTEND/Views/Modules/Content/full.html
@@ -22,7 +22,7 @@
                     {{/if}}
                 </figure>
                 {{/each}}
-                
+
                 {{/if}}
             </div>
             <div class="controls hide">
@@ -71,6 +71,10 @@
     </section>
 </div>
 {{#if Data.hasVideo}}
-<script src="/Views/Assets/jwplayer/jwplayer.js"></script>
-<script src="/Views/Assets/js/playback.js?20150506"></script>
+<script type='text/javascript' language='javascript' src='https://smartplugin.youbora.com/1.3/js/libs/youbora-data.js'></script>
+<script type='text/javascript' language='javascript' src='https://smartplugin.youbora.com/1.3/js/libs/youbora-api.js'></script>
+<script src="/Views/assets/nplayer/flowplayer/flowplayer.min.js"></script>
+<script src="/Views/assets/nplayer/hlsjs/hls.min.js"></script>
+<script src="/Views/assets/nplayer/flowplayer/flowplayer.hlsjs.min.js"></script>
+<script src='/Views/assets/js/playback-new.js?20190104'></script>
 {{/if}}
